manifests/gateway-api/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: demo-http
      protocol: HTTP
      port: 80
      hostname: gateway.demo.local
      allowedRoutes:
        namespaces:
          from: All

    - name: data-api-http
      protocol: HTTP
      port: 80
      hostname: api.data.local
      allowedRoutes:
        namespaces:
          from: All
