manifests/gateway-api/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-nginx-route
  namespace: demo
spec:
  parentRefs:
    - name: demo-gateway
      namespace: nginx-gateway
  hostnames:
    - gateway.demo.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: demo-nginx
          port: 80
